--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,31 @@
   <version>0.1</version>
   
   <dependencies>
+  
+		  <dependency>
+		    <groupId>xml-apis</groupId>
+		    <artifactId>xml-apis</artifactId>
+		    <version>1.4.01</version>
+		</dependency>
+
+		<dependency>
+            <groupId>org.eclipse.persistence</groupId>
+            <artifactId>javax.persistence</artifactId>
+            <version>2.1.0</version>
+        </dependency>  
+	
+	<dependency>
+		  <groupId>org.hibernate</groupId>
+		  <artifactId>hibernate-entitymanager</artifactId>
+		  <version>4.3.6.Final</version>
+	</dependency>
+		
+		<dependency>
+		  <groupId>mysql</groupId>
+		  <artifactId>mysql-connector-java</artifactId>
+		  <version>5.1.31</version>
+		</dependency>
+  
       <dependency>
       	<groupId>org.seleniumhq.selenium</groupId>
         <artifactId>selenium-java</artifactId>
